Improve frontend part